# Anxiu0101.github.io

./: .gitignore  404.html  CNAME  Makefile  README.md  atom.xml  changelog.yml  create.ps1  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  package-lock.json  pyproject.toml  requirements.txt  sitemap.xml  writing-online.html
.github/workflows/: ci.yml
about/: index.html
archives/: index.html
assets/cards/: index.c9fa2768.css  index.caca6175.js
changelog/: index.html
cs/: index.html
cs/algorithm/: raft.html
dev/: index.html
dev/deploy/: init-dev-env.html  linux-tool-summary.html  systemctl-intro.html  win-ssh-config.html  (+1 more)
docs/: CNAME  index.md  writing-online.md
draft/: CodeSecEval.html  anxiu-online.html  build-aiasstant-by-nextjs.html  convert-pdf2png.html  cot-for-code-gen-acmtrans25.html  latex-simple-note.html  llms_txt-note.html  nikon-rookie-note.html  power-automate-empower-your-work.html  prompts.html  protoc-simple-use.html  rag-note.html  react-first-practice-with-shadcn-ui.html  read-list.html  shadcn-ui-intro.html  simplify-protobuf-management-via-buf.html  test-free-fault-localization-icse24.html  use-case-accelerant-extraction-service.html  zsh-simple-use.html
ml/: index.html
note/: CS211-Note.html
oth/: index.html  miec-fyp-guideline.html
overrides/: home.html  main.html
rsc/: index.html
scripts/: create.ps1
search/: search_index.js  search_index.json
sec/: index.html
stylesheets/: banner.css  card.css  custom.css  extra.css  flink.css  mermaid.css
tags/: index.html
web/: index.html
(+235 files in other folders)
